Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84256

tst_QTcpServer::qtbug6305 fails with CentOS 8.1 x64

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.15.2
    • 6.0.0
    • Network: Sockets
    • None
    • 0
    • 8be31ab2e15a20de586bd31f7786b5c3f34b7e4b (qt/qtbase/dev) 58a116b5da62f16fe153dc3f95abb4072dc6a93f (qt/qtbase/5.15)
    • Qt6_Foundation_Sprint 18

    Description

      http://10.212.0.61:8083/coin/integration/qt/qt5/tasks/web_rescheduled_qt_qt5_1589517082533

      http://10.212.0.61:8083/coin/api/results/qt/qtbase/b89e0109e4bddc22f70a872f72cb462305989f50/LinuxCENTOS_8_1x86_64LinuxCENTOS_8_1x86_64GCCqtci-linux-CENTOS-8.1-x86_64-01-728909UseLegacyInstructions/1f08413e0479bcc3881893430e643bea52af79e8/test_1589517094/log.txt.gz

      agent:2020/05/15 06:11:57 build.go:264: FAIL! : tst_QTcpServer::qtbug6305(WithoutProxy:fe80::6ccc:1654:25ff:ef81%ens3) 'server.listen(listenAddress)' returned FALSE. (The address is not available)
      agent:2020/05/15 06:11:57 build.go:264: Loc: [../tst_qtcpserver.cpp(921)]
      agent:2020/05/15 06:11:57 build.go:264: FAIL! : tst_QTcpServer::qtbug6305(WithoutProxy:fe80::62e3:67aa:39c4:68d7%ens3) 'server.listen(listenAddress)' returned FALSE. (The address is not available)
      agent:2020/05/15 06:11:57 build.go:264: Loc: [../tst_qtcpserver.cpp(921)]
      agent:2020/05/15 06:11:57 build.go:264: FAIL! : tst_QTcpServer::qtbug6305(WithoutProxy:fe80::bc9e:bab3:e569:7ef7%ens3) 'server.listen(listenAddress)' returned FALSE. (The address is not available)
      agent:2020/05/15 06:11:57 build.go:264: Loc: [../tst_qtcpserver.cpp(921)]

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            hehalmet Heikki Halmet
            Maurice Kalinowski Maurice Kalinowski
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes