Skip IPv6 address if DAD failed

Fixes: QTBUG-84256
Fixes: QTBUG-84253
Task-number: QTBUG-84254
Change-Id: I6116c8a337cc85adbca1bbab2609d6627127fa46
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 8be31ab2e15a20de586bd31f7786b5c3f34b7e4b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>